<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastupdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="lastUpdated"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastupdated"
        android:text="@string/primary"
        android:textSize="18dp"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/primary"
        android:text="Number"
        android:textSize="16dp"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/number_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/primary"
        android:text="+91-11-23978046"
        android:autoLink="phone"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tollFreeLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_tollfree"
        app:layout_constraintTop_toBottomOf="@+id/number"
        android:textStyle="bold"
        android:textSize="16dp"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tollNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1075"
        android:autoLink="phone"
        app:layout_constraintTop_toBottomOf="@+id/number_val"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/tollNo"
        android:textSize="16dp"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ncov2019@gov.in"
        android:autoLink="email"
        app:layout_constraintTop_toBottomOf="@+id/tollNo"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/twitterLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        app:layout_constraintTop_toBottomOf="@+id/emailLable"
        android:textSize="16dp"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/twitterVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="https://twitter.com/MoHFW_INDIA"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@+id/emailLable"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/facebookLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        app:layout_constraintTop_toBottomOf="@+id/twitterLable"
        android:textSize="16dp"
        android:textStyle="bold"

        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/facebookVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="https://www.facebook.com/MoHFWIndia"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@+id/twitterVal"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        >
    </com.google.android.material.textview.MaterialTextView>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/facebookVal"
        android:paddingTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>