<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastupdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="lastUpdated"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastupdated"
        android:text="@string/summary"
        android:textSize="18dp"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/summary"
        android:text="@string/totalHospitals"
        android:textSize="16dp"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalHos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/summary"
        android:text="0"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalBeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalBeds"
        app:layout_constraintTop_toBottomOf="@+id/totalLabel"
        android:textSize="16dp"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalBedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@+id/totalLabel"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="https://pib.gov.in/"
        app:layout_constraintTop_toBottomOf="@+id/totalBedCount"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:autoLink="web"
        android:textStyle="bold"
        >
    </com.google.android.material.textview.MaterialTextView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sources"
        android:paddingTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>